[package]
authors = ["Yifei Liu"]
edition = "2018"
readme = "README.md"
name = "mysegway"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5.6"
panic-halt = "0.2.0"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

embedded-hal = "0.2.0"
bitbang-hal = "0.3.2"
dcmimu = "0.2.2"
heapless = "0.7.0"
l298n = "0.2.0"
mpu6050 = "0.1.0"
pid_control = "0.7.2"
nb = "1.0.0"
embedded-graphics = "0.7.1"
ssd1306 = "0.7.0"
micromath = "2.0.0"

    [dependencies.stm32f1xx-hal]
    version = "0.6.1"
    features = ["rt", "stm32f103", "medium"]

[[bin]]
name = "mysegway"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
opt-level = "z"

[profile.dev.package."*"]
opt-level = "z"
